@@ -1,12 +1,11 @@
-#!/bin/bash
-min_heap_size="50m"
-max_heap_size="100m"
+#!/bin/sh
+#./etc/profile
 home=$PWD
-cpath=$CLASSPATH:../classes/:$home
+cpath=$CLASSPATH:../classes/
 for file in ../lib/*.jar;
 do
         cpath=$cpath:$file
-	done;
-	export CLASSPATH=$cpath
-	echo $CLASSPATH
-	nohup java -Xms$min_heap_size -Xmx$max_heap_size -XX:PermSize=128m -Xloggc:log/gc.log -XX:+PrintGCTimeStamps -XX:-PrintGCDetails -cp $CLASSPATH com.kuyun.oa.job.SynchronousClockDataJob  $@>> nohup.out  &
+done;
+export CLASSPATH=$cpath
+echo $CLASSPATH
+nohup java -Xms512m -Xmx4096m -Xss512K -Xoss512M -server -Dsun.net.client.defaultConnectTimeout=120000 -Dsun.net.client.defaultReadTimeout=240000 -Djava.awt.headless=true com.kuyun.monitor.SendAdMonitorJob > ad_monitor.log 2>&1 &
